// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTableCaption customize 1`] = `
<div>
  <caption>
    Test
  </caption>
</div>
`;

exports[`loads and displays CTableCaption component 1`] = `
<div>
  <caption />
</div>
`;
